test/expected/explain_f_v__v.out
explain void f() -> void
        ^
9: error: function with trailing return type must only specify "auto"
